--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
 </head>
 <body>
 <div id="dobwow">dobwow</div>
-<audio controls autoplay loop>
-  <source src="{{ url_for('static', filename='ogg/dubwow.ogg') }}" type="audio/ogg">
-</audio>
+<div style="display:none;">
+<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/88910704&amp;auto_play=true&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
+</div>
 </body>
 </html>
